scrollOverflow improvements: - Using native scrolling on touch devices to preserve momentum scrolling - Debouncing MouseWheelHandler to prevent changing sections too quickly when scrolling inside a section - Hiding slimscroll-bars when switching slides which prevents the bar from sliding across the screen

--- a/jquery.fullPage.scss
+++ b/jquery.fullPage.scss
@@ -1,12 +1,13 @@
 /**
- * fullPage 2.6.0
+ * fullPage 2.6.4
  * https://github.com/alvarotrigo/fullPage.js
  * MIT licensed
  *
  * Copyright (C) 2013 alvarotrigo.com - A project by Alvaro Trigo
  * Contribution by Jhony0311
  */
-html, body {
+html.fp-enabled,
+.fp-enabled body {
     margin: 0;
     padding: 0;
     overflow:hidden;
@@ -88,10 +89,26 @@ html, body {
 }
 .fp-scrollable {
     overflow: scroll;
+
+    .fp-touch & {
+        overflow-x: hidden;
+        overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
+        height: 100%;
+    }
 }
 .fp-notransition {
     -webkit-transition: none !important;
     transition: none !important;
+}
+.fp-navigating {
+    .fp-scrollable {
+        overflow-y: hidden !important;
+    }
+
+    .slimScrollBar {
+        display: none !important;
+    }
 }
 .fp-slidesNav{
     position: absolute;
@@ -183,7 +200,7 @@ html, body {
     opacity: 1;
     -webkit-transform: translate3d(0,0,0);
     &.right {
-       right: 17px; 
+       right: 17px;
     }
     &.left {
         left: 17px
@@ -208,7 +225,7 @@ html, body {
                 }
 
                 &.left {
-
+                    left: 20px;
                 }
             }
             &:hover {
